# envbool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  envbool-design.md  justfile  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/envbool/: __init__.py  __main__.py  _cli.py  _config.py  _core.py  _defaults.py  _env.py  config.py  core.py  exceptions.py
tests/: conftest.py  test_cli.py  test_cli_subprocess.py  test_config.py  test_core.py  test_defaults.py  test_env.py  test_exceptions.py  test_properties.py  test_smoke.py
