[project]
name = "envbool"
version = "0.1.1"
description = "A small Python library and CLI tool for coercing environment variables (and arbitrary strings) into boolean values."
readme = "README.md"
authors = [{ name = "Kyle O'Malley", email = "j.kyle.omalley@gmail.com" }]
requires-python = ">=3.11"
license = "MIT"
keywords = ["environment variables", "boolean", "configuration", "env", "coerce"]
dependencies = [
    "platformdirs>=4.9.6",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/jkomalley/envbool"
Repository = "https://github.com/jkomalley/envbool"
Issues = "https://github.com/jkomalley/envbool/issues"
Changelog = "https://github.com/jkomalley/envbool/releases"

[project.scripts]
envbool = "envbool._cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

# --------------------------------------------------------------------------- #
# Ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Formatting / style clashes ---
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__ method

    # --- Overly pedantic / noisy ---
    "ANN401", # dynamically typed expressions (typing.Any) disallowed
    "COM812", # missing trailing comma (conflicts with formatter)
    "ISC001", # single-line implicit string concatenation (conflicts with formatter)
    "FIX002", # line contains TODO
    "TD002",  # missing author in TODO
    "TD003",  # missing issue link in TODO
    "ERA001", # found commented-out code
    "TRY003", # avoid specifying long messages outside the exception class
    "EM101",  # exception must not use a string literal
    "EM102",  # exception must not use an f-string literal

    # --- Pragmatic ignores ---
    "S101",   # use of assert (needed in tests, fine in internal code)
    "PLR2004",# magic value used in comparison
    "PLR0913",# too many arguments — envbool API is intentionally keyword-heavy
    "CPY001", # missing copyright notice
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # no docstring requirements in tests
    "ANN",    # no type annotation requirements in tests
    "SLF001", # allow access to private members in tests
]
"src/envbool/_cli.py" = [
    "T201",   # print() is the primary output mechanism for CLI
]

# --------------------------------------------------------------------------- #
# ty
# --------------------------------------------------------------------------- #
[tool.ty.rules]
possibly-missing-import = "warn"

# --------------------------------------------------------------------------- #
# Pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

# --------------------------------------------------------------------------- #
# Coverage
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["envbool"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
